# test1

./: LICENSE  README.md  opencode.json  pyproject.toml  requirements.txt
Lesson10/: 20260720_3.ipynb  20260720_4.py  20260720_5.py  gui.py  test_20260720_5.py
Lesson11/: 20260722_1.py  20260722_1a.py  20260722_1a_CodeReview.md
Lesson6/: 20260706.ipynb  20260706.py
Lesson8/: 20260713_2.py  20260713_3.py  game.py
Lesson9/: 20260715_2.py  20260715_3.py
lesson4/: README.md
lesson5/: 20260706.ipynb  practice1.ipynb
lesson7/: 20260708.ipynb  20260708_2.ipynb  20260713.ipynb
outputs/price_extractor/: final_script.py  plan.md
outputs/price_extractor/final_runs/run_1/: final_script.py  final_script_log.txt
outputs/ptt_gossiping_top10/: final_script.py  plan.md
outputs/ptt_gossiping_top10/explore/: explore_ptt.py
outputs/ptt_gossiping_top10/final_runs/run_1/: final_script.py  final_script_log.txt
outputs/taiwan_bank_usd_twd/: final_script.py  plan.md
outputs/taiwan_bank_usd_twd/explore/: bot_cookies.txt  bot_first.html  bot_second.txt  explore_bot_rates.py  explore_bot_rates_chrome.py  explore_bot_rates_chrome_headed.py
outputs/taiwan_bank_usd_twd/final_runs/run_1/: final_script.py  final_script_log.txt
outputs/taiwan_bank_usd_twd/final_runs/run_2/: final_script.py  final_script_log.txt
