[project]
name = "2026-06-17-playwirght"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.6.0",
    "lab>=8.10",
    "playwright>=1.61.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
